updating website pages to add info about iwdg

--- a/community-outreach.html
+++ b/community-outreach.html
@@ -119,19 +119,38 @@
 		<div class="section-header">
                     <h3>Upcoming Events</h3>
                 </div>
-		    
+
+        <button type="button" class="collapsible">International Women's Day Gala 2024</button>
+        <div class="content">
+            <!--<img src="img/marketing/PwC.png" width="100%" height="650"> -->
+            <p>
+                The International Women's Day Gala is a night filled with speakers, live performances, dinner, and the opportunity to network with inspiring women across multiple fields in STEM. 
+                Join us for an unforgettable evening of empowerment and celebration that we hope will leave you inspired to be a Changemake-HER! The dress code for the evening is black tie and 
+                the schedule for the evening can be found below. 
+            </p>
+            <p style="margin-bottom:0;"><b>Schedule</b></p>
+            <ul>
+                <li>5:30 PM - 6:00 PM: Registration</li>
+                <li>6:00 PM - 6:30 PM: Opening Ceremonies</li>
+                <li>6:30 PM - 7:00 PM: Keynote Speaker</li>
+                <li>7:00 PM - 7:45 PM: Dinner</li>
+                <li>7:45 PM - 8:45 PM: Panel Discussion</li>
+                <li>8:45 PM - 9:50 PM: Networking Session</li>
+                <li>9:50 PM - 10:00 PM: Closing Ceremonies</li>
+            </ul>      
+        </div>
+
 		<button type="button" class="collapsible">Go ENG Girl: Fall 2023</button>
-                <div class="content">
-                    <!img src="img/marketing/PwC.png" width="100%" height="650">
-			<p><b>Go ENG Girl: Fall 2023</b> </p>
-			<p><b>About the Workshop</b>: Calling all Girls and Non-binary Youth! </p>
-			<p>You probably know that engineers build bridges. But do you know that they write computer software? Investigate new ways to bring clean water to communities? Design medical devices that are changing the face of healthcare?</p>
-			<p>Come find out why an increasing number of women and non-binary folks are choosing engineering as their path to an exciting career that offers academic challenge, cutting-edge technology, and the opportunity to make the world a better place.</p>
-			<p>Go ENG Girl offers girls and non-binary youth in grades 7-10 the chance to learn more about engineering through a series of fun hands-on activities and exhibits. Women undergraduate students, professional engineers, and professors take part in the day to share their stories of passion, inspiration, and success.</p>
-			<p><b>Date:</b> Saturday, November 25, 2023</p>
-			<p><b>Time:</b> 9:00 AM - 3:00 PM EST</p>
-			<p>You may complete the form through this link to access the registration link for the event: <a href="https://campscui.active.com/orgs/EngineeringOutreachUniversityofToronto?season=3399641">Click Here!</a> </p>                   
-                </div>
+        <div class="content">
+            <!--<img src="img/marketing/PwC.png" width="100%" height="650"> -->
+            <p><b>About the Workshop</b>: Calling all Girls and Non-binary Youth! </p>
+            <p>You probably know that engineers build bridges. But do you know that they write computer software? Investigate new ways to bring clean water to communities? Design medical devices that are changing the face of healthcare?</p>
+            <p>Come find out why an increasing number of women and non-binary folks are choosing engineering as their path to an exciting career that offers academic challenge, cutting-edge technology, and the opportunity to make the world a better place.</p>
+            <p>Go ENG Girl offers girls and non-binary youth in grades 7-10 the chance to learn more about engineering through a series of fun hands-on activities and exhibits. Women undergraduate students, professional engineers, and professors take part in the day to share their stories of passion, inspiration, and success.</p>
+            <p><b>Date:</b> Saturday, November 25, 2023</p>
+            <p><b>Time:</b> 9:00 AM - 3:00 PM EST</p>
+            <p>You may complete the form through this link to access the registration link for the event: <a href="https://campscui.active.com/orgs/EngineeringOutreachUniversityofToronto?season=3399641">Click Here!</a> </p>                   
+        </div>
 
 		<script>
                     var coll = document.getElementsByClassName("collapsible");
@@ -184,6 +203,18 @@
                         <li data-target="#past-events-display" data-slide-to="1"></li>
                     </ol>
                     <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="img/outreach/iwdg2024picture.jpeg" alt="iwd-gala-2024">
+                        </div>
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="img/outreach/iwdgtable1.JPG" alt="iwd-table-photo">
+                        </div>
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="img/outreach/iwdgtable2.jpg" alt="iwd-location-photo">
+                        </div>
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="img/outreach/iwdgtable3.jpg" alt="iwd-setup-photo">
+                        </div>
                         <div class="carousel-item active">
                             <img class="d-block w-100" src="img/outreach/iwd-gala.png" alt="iwd-gala-2019">
                         </div>
