--- a/events.html
+++ b/events.html
@@ -130,6 +130,26 @@
                 <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
                     <div class="card">
                         <div class="card-header">
+                            <h3>International Women’s Day Gala</h3>
+                        </div>
+                        <div class="card-block" >
+                            <h4 class="card-title">March 13th, 2024</h4>
+                            <!-- <img src="img/marketing/Recruitment_Main.png" class="img-fluid" alt="comm-outreach" style="width:60%; border-radius: 8px; margin-top: 25px; margin-bottom: 25px"> -->
+                            <p style="margin-left: 80px; margin-right: 80px;">
+                                Join us at <b>Hart House on March 13th, 2024 from 5:30PM - 10:00PM</b> for our annual International Women’s Day Gala as we celebrate the tenacity and accomplishments of female leaders and 
+                                Changemake-HERs! The annual WISE International Women's Day Gala commemorates the incredible achievements of women and is a day of unity, celebration, reflection, and advocacy. This year's 
+                                gala has a theme of "Changemake-HERs", highlighting the "Changemake-HERs" who are actively reshaping the narrative and challenging societal norms.
+                            </p>
+                            <a href="https://www.zeffy.com/en-CA/ticketing/accd2015-ada0-430a-8f16-4cf0d949b978" target="_blank" class="btn-current">Purchase tickets here!</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row flex-items-lg-middle flex-items-lg-center"> 
+                <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
+                    <div class="card">
+                        <div class="card-header">
                             <h3>Winter WISE & Cheese</h3>
                         </div>
                         <div class="card-block" >
@@ -138,7 +158,7 @@
                             <p style="margin-left: 80px; margin-right: 80px;">If you’re looking for a summer internship, PEY, enriching networking experience, or want to discover exciting new career opportunities, join us in GB202 for WISE & Cheese! It will be a distinguished evening 
                                 where you can have face-to-face conversations with reps from leading companies in STEM. We’re hosting OPG, GM, Vector Institute, Qualcomm, Intuit, CIBC, Magna, Mastercard, and more! Catering and refreshments will be provided!
                             </p>
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc-0dtlbFS84IoykQuDv7ntfbqWbOpbY53HHzVHpRv9jo4Qpg/viewform?usp=sf_link" target="_blank" class="btn-current">Register here! Registration deadline is February 23rd, 2024 at 11:59PM</a>
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc-0dtlbFS84IoykQuDv7ntfbqWbOpbY53HHzVHpRv9jo4Qpg/viewform?usp=sf_link" target="_blank" class="btn-current">Registration Closed!</a>
                         </div>
                     </div>
                 </div>
