--- a/community-outreach.html
+++ b/community-outreach.html
@@ -120,7 +120,7 @@
                     <h3>Upcoming Events</h3>
                 </div>
 
-        <button type="button" class="collapsible">International Women's Day Gala 2024</button>
+        <button type="button" style="margin:10px;" class="collapsible">International Women's Day Gala 2024</button>
         <div class="content">
             <!--<img src="img/marketing/PwC.png" width="100%" height="650"> -->
             <p>
@@ -140,7 +140,7 @@
             </ul>      
         </div>
 
-		<button type="button" class="collapsible">Go ENG Girl: Fall 2023</button>
+		<button type="button" style="margin:10px;" class="collapsible">Go ENG Girl: Fall 2023</button>
         <div class="content">
             <!--<img src="img/marketing/PwC.png" width="100%" height="650"> -->
             <p><b>About the Workshop</b>: Calling all Girls and Non-binary Youth! </p>
