--- a/community-outreach.html
+++ b/community-outreach.html
@@ -201,6 +201,11 @@
                     <ol class="carousel-indicators">
                         <li data-target="#past-events-display" data-slide-to="0" class="active"></li>
                         <li data-target="#past-events-display" data-slide-to="1"></li>
+                        <li data-target="#past-events-display" data-slide-to="2"></li>
+                        <li data-target="#past-events-display" data-slide-to="3"></li>
+                        <li data-target="#past-events-display" data-slide-to="4"></li>
+                        <li data-target="#past-events-display" data-slide-to="5"></li>
+                        <li data-target="#past-events-display" data-slide-to="6"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
