--- a/opportunities.html
+++ b/opportunities.html
@@ -177,7 +177,7 @@
                         learn about the pivotal role curiosity plays in shaping a fulfilling and dynamic career.</p>
                     <p>This will be an unmissable event that promises to challenge and inspire you, whichever stage of
                         life you are in.</p>
-                    <img src="img/opportunities/15149_Success Through Balance_Slide.png">
+                    <img src="img/opportunities/15149_Success Through Balance_Slide.png" height="503px" width="894px">>
                 </div>
 
                 <button type="button" style="margin:10px;" class="collapsible">A One-Year Law Degree for STEM
@@ -188,13 +188,12 @@
                         This is why STEM majors have chosen to enrol in the <b><a
                                 href="https://mx.technolutions.net/ss/c/gsby7xed_Q9kJKoUKuDGdH13INt40E3t2MyGK0NafwClmcwZeYL7bDtrof9_XFnxnagEP-YSR14hmAsvuvwz3cEIrhqot1Z_W3E-N4U0dOY/43u/TOvkGJs5RHeWzBdeZ98OLQ/h1/yut1S90D-c72YhegKH-3Yv88tO0yek35d9ls7Z0KAn8">
                                 one-year Master of Science in Law</a> (MSL)</b> program at <b>Northwestern Pritzker
-                            School of
-                            Law. We invite you and members of your group to learn about this <a
+                                School of Law. We invite you and members of your group to learn about this <a
                                 href="https://mx.technolutions.net/ss/c/gsby7xed_Q9kJKoUKuDGdIjcQek3kq22JakPE1A2F95GTE_mTGls7R9lcUeKG9-ifGBu5XPgyvQ7FCtGMTc4rQ/43u/TOvkGJs5RHeWzBdeZ98OLQ/h2/51TPmlekyBKtBgFBw02ajw-gs8NeKxKAwtSwKKDkajw">one-of-a-kind
                                 degree</a></b> by attending the: <b><a
                                 href="https://mx.technolutions.net/ss/c/VpDhrCrvzjOrNk6AZ3TbHuBkw3bNDLXwA_ijGGgxEXLUrylnXI8yZOn9zHvChROA-2nNDHEgF9DmAEULZ3OpjTe46Jxy7JNKLn53sAmwg6-GWMbIZoEpKCr110GgMkJ8/43u/TOvkGJs5RHeWzBdeZ98OLQ/h3/rBYF2UE35JDEDVhdwTcXPfxQfGJd0hrGvFoMV_3xgdk">Master
                                 of Science in Law (MSL) Open House</a></b><br>
-                        Saturday, March 9th<br>9:30 AM - 12:30 PM CT<br><i>In-person and virtual attendance options are
+                                Saturday, March 9th<br>9:30 AM - 12:30 PM CT<br><i>In-person and virtual attendance options are
                             available</i></p>
                     <p>The Open House is an <b>excellent opportunity to hear about this unique degree</b> from the MSL
                         program director, current students, and alums. You can also visit a class that provides a good
@@ -212,8 +211,7 @@
                     <p></p>
                 </div>
 
-                <button type="button" style="margin:10px;" class="collapsible">Success through Balance: An International
-                    Conversation with Avivah Wittenberg-Cox (BA 1981)</button>
+                <button type="button" style="margin:10px;" class="collapsible">2SLGBTQ+ Student & Alumni Career Networking Night</button>
                 <div class="content">
                     <p>The <a href="https://sgdo.utoronto.ca/">Sexual & Gender Diversity Office (SGDO)</a>, <a
                             href="https://studentlife.utoronto.ca/department/career-exploration-education/">Career
@@ -221,7 +219,7 @@
                             Relations</a>
                         are proud to present the <b>Student & Alumni Career Networking Night</b> for 2SLGBTQ+ students
                         and alumni. Please feel free to forward this email to your network or share the information via
-                        any other channels. If you’re a 2SLGBTQ+ student with questions about life as a 2SLGBTQ+ grad,
+                        any other channels. If you're a 2SLGBTQ+ student with questions about life as a 2SLGBTQ+ grad,
                         come ask Queers with careers.
                         Get their advice and start building your U of T community of supportive alumni.</p>
                     <p style="margin-bottom:0;">Your networking night includes:</p>
@@ -230,16 +228,14 @@
                         <li>A professional headshot photo booth</li>
                         <li>Meet and greet icebreakers</li>
                     </ul>
-                    <b>
-                        <p style="margin-bottom:0;">Event details:</p>
-                        <li>
-                            <ul>Thursday, February 29, 2024</ul>
-                            <ul>5:30–7:30 p.m. EST</ul>
-                            <ul>St. George Campus</ul>
-                            <ul>Free</ul>
-                            <ul>Evening hosted by Gabrielle Zilkha – U of T alum, filmmaker and comedian.</ul>
-                        </li>
-                    </b>
+                    <p style="margin-bottom:0;"><b>Event details:</b></p>
+                    <li>
+                        <ul><b>Thursday, February 29, 2024</b></ul>
+                        <ul><b>5:30-7:30 p.m. EST</b></ul>
+                        <ul><b>St. George Campus</b></ul>
+                        <ul><b>Free</b></ul>
+                        <ul><b>Evening hosted by Gabrielle Zilkha - U of T alum, filmmaker and comedian.</b></ul>
+                    </li>
                 </div>
 
 
