fix carousel on community outreach page

--- a/community-outreach.html
+++ b/community-outreach.html
@@ -211,16 +211,16 @@
                         <div class="carousel-item active">
                             <img class="d-block w-100" src="img/outreach/iwdg2024picture.jpeg" alt="iwd-gala-2024">
                         </div>
-                        <div class="carousel-item active">
+                        <div class="carousel-item">
                             <img class="d-block w-100" src="img/outreach/iwdgtable1.JPG" alt="iwd-table-photo">
                         </div>
-                        <div class="carousel-item active">
+                        <div class="carousel-item">
                             <img class="d-block w-100" src="img/outreach/iwdgtable2.jpg" alt="iwd-location-photo">
                         </div>
-                        <div class="carousel-item active">
+                        <div class="carousel-item">
                             <img class="d-block w-100" src="img/outreach/iwdgtable3.jpg" alt="iwd-setup-photo">
                         </div>
-                        <div class="carousel-item active">
+                        <div class="carousel-item">
                             <img class="d-block w-100" src="img/outreach/iwd-gala.png" alt="iwd-gala-2019">
                         </div>
                         <div class="carousel-item">
