--- a/events.html
+++ b/events.html
@@ -130,6 +130,25 @@
                 <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
                     <div class="card">
                         <div class="card-header">
+                            <h3>WISE X AMD Panels & Networking Event</h3>
+                        </div>
+                        <div class="card-block" >
+                            <h4 class="card-title">March 13th, 2024</h4>
+                            <!-- <img src="img/marketing/Recruitment_Main.png" class="img-fluid" alt="comm-outreach" style="width:60%; border-radius: 8px; margin-top: 25px; margin-bottom: 25px"> -->
+                            <p style="margin-left: 80px; margin-right: 80px;">
+                                Join WISE and AMD for an informative panel speaker session! The 6 speakers comprised of experienced professionals and current interns who have all studied at UofT are eager to share their experiences in the field of computer, software, and electrical engineering. The session is aimed towards women in STEM, but students from all disciplines are welcome. A networking session will take place after the engaging panel, so be sure to come prepared with questions for the panellists and recruiters, particularly about working at AMD and internship opportunities.
+                                The event will take place on <b>March 20th, 2024 from 6:00pm to 7:30pm</b> at the<b>Wallberg Memorial Building, room WB119.</b> If interested, please complete this registration form by March 19th at 11:59pm:
+                            </p>
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSeAscyI2IBELeSms49vS7dbRgePMtIe-UDNn3OPTLbc3v2TRA/viewform?usp=sf_link" target="_blank" class="btn-current">Complete this registration form by March 19th!</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row flex-items-lg-middle flex-items-lg-center"> 
+                <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
+                    <div class="card">
+                        <div class="card-header">
                             <h3>International Women’s Day Gala</h3>
                         </div>
                         <div class="card-block" >
