Added go code girl 2024 to events and community outreach page

--- a/community-outreach.html
+++ b/community-outreach.html
@@ -119,7 +119,17 @@
 		<div class="section-header">
                     <h3>Upcoming Events</h3>
                 </div>
-
+        
+        <button type="button" style="margin:10px;" class="collapsible">Go Code Girl!</button>
+        <div class="content">
+            <!--<img src="img/marketing/PwC.png" width="100%" height="650"> -->
+            <p>Computer science isn't just a subject; it's a mindset—an approach to problem-solving and creativity. From healthcare to finance, entertainment to transportation, computer science is quickly becoming the backbone of innovation and advancement in our everyday lives.</p>
+            <p> Come find out why an increasing number of women and non-binary folks are choosing computer science as their path to an exciting career that offers academic challenge, and the opportunity to make a transformative impact on our world.</p>
+            <p> Go Code Girl offers girls and non-binary youth in grades 7-10 the chance to delve into the world of coding through a series of introductory hands-on activities. Led by women undergraduate students, learn more about computer science through fundamental topics such as loops, binary systems, and AI. </p>
+            <p>Note: Students will need to bring their own laptop (and charger) and their own lunch.</p>
+            <p>The event will take place on Saturday, March 23rd, 2024. <a href="https://campscui.active.com/orgs/EngineeringOutreachUniversityofToronto#/selectSessions/3474643">Register here!</a></p>
+        </div>
+        
         <button type="button" style="margin:10px;" class="collapsible">International Women's Day Gala 2024</button>
         <div class="content">
             <!--<img src="img/marketing/PwC.png" width="100%" height="650"> -->
