--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <ul>
                     <li class="drop-down"><a href="#">About</a>
                         <ul>
-                            <li><a href="#about">Our Mission</a></li>
+                            <li><a href="#mission">Our Mission</a></li>
                             <li><a href="our-team.html">Our Team</a></li>
                             <li><a href="sponsors.html">Our Sponsors</a></li>
                             <li><a href="#about">About Us</a></li>
@@ -122,11 +122,11 @@
     <main id="main">
 
         <!--=====Mission======-->
-        <section id="about">
+        <section id="mission">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7 col-md-6">
-                        <div class="about-content">
+                        <div class="mission-content">
                             <h2>Mission</h2>
                             <p>The Women in Science and Engineering–University of Toronto Chapter (WISE UofT) was
                                 established in 1999 to support cis/trans women in STEM fields (including 2-spirit and
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                     <div class="col-lg-5 col-md-6">
-                        <div class="about-img">
+                        <div class="mission-img">
                             <img src="img/aboutteam.jpg" alt="">
                         </div>
                     </div>
@@ -228,7 +228,7 @@
         </section><!-- #initiatives -->
 
         <!--=====About Us======-->
-        <section id="mission">
+        <section id="about">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7 col-md-6">
