Updated the mission and about us images

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     </div>
                     <div class="col-lg-5 col-md-6">
                         <div class="mission-img">
-                            <img src="img/mission.jpg" alt="">
+                            <img src="img/mission.JPG" alt="">
                         </div>
                     </div>
                 </div>
@@ -247,7 +247,7 @@
                     </div>
                     <div class="col-lg-5 col-md-6">
                         <div class="about-img">
-                            <img src="img/aboutus.JPG" alt="">
+                            <img src="img/aboutus.jpg" alt="">
                         </div>
                     </div>
                 </div>
