--- a/index.html
+++ b/index.html
@@ -109,10 +109,11 @@
     <!--=====Opening Bar======-->
     <section id="intro" class="clearfix">
         <div class="container h-100" style="display: flex; justify-content: flex-end;">
-            <div class="intro-layer" style="display: flex; justify-content: flex-end; align-items: center;">
-            <div class="row justify-content-center align-self-center">
-                <div class="col-md-6 intro-info order-md-last order-first text-right">
-                    <h2><span>Women in Science and Engineering</span><br> University of Toronto</h2>
+            <div class="intro-layer" style="display: flex; justify-content: center; align-items: center;">
+                <div class="row justify-content-center align-self-center">
+                    <div class="col-md-6 intro-info order-md-last order-first text-right">
+                        <h2><span>Women in Science and Engineering</span><br> University of Toronto</h2>
+                    </div>
                 </div>
             </div>
         </div>
