--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
     <section id="intro" class="clearfix">
         <div class="container h-100" style="display: flex; justify-content: flex-end;">
             <div class="intro-layer" style="display: flex; justify-content: center; align-items: center;">
-                <div class="row justify-content-center align-self-center">
-                    <div class="col-md-6 intro-info order-md-last order-first text-right">
+                <div class="justify-content-center align-self-center" style="width:100%; margin: 0%; padding: 0;">
+                    <div class="intro-info order-md-last order-first text-right">
                         <h2><span>Women in Science and Engineering</span><br> University of Toronto</h2>
                     </div>
                 </div>
