Add info banner to events page

--- a/events.html
+++ b/events.html
@@ -26,6 +26,7 @@
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -91,6 +92,10 @@
         
         <section id="our-events" class="section-bg">
             <div class="container">
+                <div class="info-banner">
+                    <i class="bi bi-info-circle icon-size"></i>
+                    <p> Please check back in September for more infomation on the 2024-2025 academic year! </p>
+                </div>
                 <header class="section-header">
                     <h3>Upcoming Events</h3>
                     <p>To get the latest updates on our upcoming events and recruitment, please subscribe to our <a href="https://forms.gle/Rs7u2LsBviyaWunc6" target="_blank">newsletter</a>, 
