Add banner to initiatives>community, hs, industry

--- a/hs-outreach.html
+++ b/hs-outreach.html
@@ -27,6 +27,7 @@
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -92,7 +93,10 @@
         
         <section id="about-this-initiative">
             <div class="container">
-
+                <div class="info-banner">
+                    <i class="bi bi-info-circle icon-size"></i>
+                    <p> Please check back in September for more infomation on the 2024-2025 academic year! </p>
+                </div>
                 <div class="section-header">
                     <h3>High School Outreach</h3>
                 </div>
