Add Ionicons script and update icon styling in info-banner

--- a/hs-outreach.html
+++ b/hs-outreach.html
@@ -27,7 +27,6 @@
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -94,7 +93,7 @@
         <section id="about-this-initiative">
             <div class="container">
                 <div class="info-banner">
-                    <i class="bi bi-info-circle icon-size"></i>
+                    <ion-icon name="information-circle-outline" class="icon-size"></ion-icon>
                     <p> Please check back in September for more infomation on the 2024-2025 academic year! </p>
                 </div>
                 <div class="section-header">
@@ -285,6 +284,8 @@
     <script src="lib/isotope/isotope.pkgd.min.js"></script>
     <script src="lib/lightbox/js/lightbox.min.js"></script>
     <script src="js/main.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   
 </body>
 </html>
