--- a/community-outreach.html
+++ b/community-outreach.html
@@ -120,7 +120,7 @@
                     <h3>Upcoming Events</h3>
                 </div>
         
-        <button type="button" style="margin-bottom:10px; margin-top:10px"" class="collapsible">Go Code Girl!</button>
+        <button type="button" style="margin-bottom:10px; margin-top:10px" class="collapsible">Go Code Girl!</button>
         <div class="content">
             <div class="inner-content">
                 <!--<img src="img/marketing/PwC.png" width="100%" height="650"> -->
@@ -132,7 +132,7 @@
             </div>
         </div>
         
-        <button type="button" style="margin-bottom:10px; margin-top:10px"" class="collapsible">International Women's Day Gala 2024</button>
+        <button type="button" style="margin-bottom:10px; margin-top:10px" class="collapsible">International Women's Day Gala 2024</button>
         <div class="content">
             <div class="inner-content">
                 <!--<img src="img/marketing/PwC.png" width="100%" height="650"> -->
