--- a/storiesofwise.html
+++ b/storiesofwise.html
@@ -75,6 +75,25 @@
         font-family: "Montserrat", sans-serif;
         font-weight: 700;
         }
+
+        /* Copy of btn-current from style.css */
+        .btn-purple { 
+            text-transform: uppercase;
+            font-size: 13px;
+            font-weight: 500;
+            border-radius: 0;
+            padding: 10px 24px;
+            letter-spacing: 1px;
+            border-radius: 3px;
+            display: inline-block;
+            background: #4a148c;
+            color: #fff;
+        }
+
+        .btn-purple:hover {
+            background: #8e24aa;
+        }
+
     </style>
   
   
@@ -146,8 +165,8 @@
                     data-maxcols="3"
                     data-layout="grid"
                     data-poststyle="inline"
-                    data-readmore="Read the rest"
-                    data-buttonclass="btn btn-primary"
+                    data-readmore="Read more"
+                    data-buttonclass="btn-purple"
                     data-offset="-100">
                 </div>
             </div>
