Add spacing around buttons

--- a/storiesofwise.html
+++ b/storiesofwise.html
@@ -42,11 +42,9 @@
     <style>
         /* Custom CSS for Medium embed */
         #retainable-rss-embed .rss-row {
-        background-color: #ffffff; /* Set the background color */
-        padding: 30px; /* Adjust padding as needed */
-        border-radius: 10px; /* Add rounded corners */
+        background-color: #ffffff; 
+        border-radius: 10px; 
         position: relative;
-        overflow: hidden;
         margin: 0 10px 40px 10px;
         box-shadow: 0 10px 29px 0 rgba(68, 88, 144, 0.1);
         transition: all 0.3s ease-in-out;
@@ -88,12 +86,13 @@
             display: inline-block;
             background: #4a148c;
             color: #fff;
+            margin: 10px;
         }
 
         .btn-purple:hover {
+            color: #fff;
             background: #8e24aa;
         }
-
     </style>
   
   
