--- a/events.html
+++ b/events.html
@@ -129,6 +129,47 @@
                 <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
                     <div class="card">
                         <div class="card-header">
+                            <h3> Healthcare Data Hiring Manager's Insights</h3>
+                            <h4> Brave Careers x WISE </h4>
+                        </div>
+                        <div class="card-block" >
+                            <h4 class="card-title">October 9th, 2024</h4>
+                            <!-- <img src="img/marketing/Recruitment_Main.png" class="img-fluid" alt="comm-outreach" style="width:60%; border-radius: 8px; margin-top: 25px; margin-bottom: 25px"> -->
+                            <p style="margin-left: 80px; margin-right: 80px;">
+                               WISE is collaborating with BraveCareers to host a workshop to improve your resume.  Get advice on your resume directly from a hiring manager from the healthcare data industry!  
+                            </p>
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLScB_xNx_51X_pZwgKTSTBVwOiDxyosR0UynsPU8YJrt2iewqQ/viewform?usp=sf_link" target="_blank" class="btn-current">Register Here!</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row flex-items-lg-middle flex-items-lg-center"> 
+                <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
+                    <div class="card">
+                        <div class="card-header">
+                            <h3>Women in Technology Panel</h3>
+                            <h4> Nvidia x WISE </h4>
+                        </div>
+                        <div class="card-block" >
+                            <h4 class="card-title">October 2nd, 2024</h4>
+                            <!-- <img src="img/marketing/Recruitment_Main.png" class="img-fluid" alt="comm-outreach" style="width:60%; border-radius: 8px; margin-top: 25px; margin-bottom: 25px"> -->
+                            <p style="margin-left: 80px; margin-right: 80px;">
+                                Hear from Nancy Argawal and Jyothi Kolli as they share their
+                                unique career journeys, innovative projects and what a typical
+                                day in their roles look like.
+                                Don't miss out on an opportunity to gain insider advice and learn how you can take the next step in your career!
+                            </p>
+                            <a href="https://nvidia.eightfold.ai/events/candidate?plannedEventId=NObAMwbKO" target="_blank" class="btn-current">Register Here!</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row flex-items-lg-middle flex-items-lg-center"> 
+                <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
+                    <div class="card">
+                        <div class="card-header">
                             <h3>Go Code Girl</h3>
                         </div>
                         <div class="card-block" >
@@ -150,7 +191,8 @@
                 <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
                     <div class="card">
                         <div class="card-header">
-                            <h3>WISE X AMD Panels & Networking Event</h3>
+                            <h3> Panels & Networking Event</h3>
+                            <h4>WISE X AMD</h4>
                         </div>
                         <div class="card-block" >
                             <h4 class="card-title">March 13th, 2024</h4>
