Redesigned event card

--- a/events.html
+++ b/events.html
@@ -129,26 +129,34 @@
                     </div>
                 </div>
             -->
-            <div class="row flex-items-lg-middle flex-items-lg-center"> 
+            <div class="row flex-items-lg-middle flex-items-lg-center">
                 <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
-                    <div class="card">
-                        <div class="card-header">
-                            <h3>Go Code Girl</h3>
-                        </div>
-                        <div class="card-block" >
+                    <div class="card d-flex flex-row align-items-center">
+                        <div class="card-block">
+                            <!-- Card Content -->
                             <h4 class="card-title">March 23rd, 2024</h4>
-                            <!-- <img src="img/marketing/Recruitment_Main.png" class="img-fluid" alt="comm-outreach" style="width:60%; border-radius: 8px; margin-top: 25px; margin-bottom: 25px"> -->
-                            <p style="margin-left: 80px; margin-right: 80px;">
-                                Computer science isn't just a subject; it's a mindset—an approach to problem-solving and creativity. From healthcare to finance, entertainment to transportation, computer science is quickly becoming the backbone of innovation and advancement in our everyday lives.
-                                Come find out why an increasing number of women and non-binary folks are choosing computer science as their path to an exciting career that offers academic challenge, and the opportunity to make a transformative impact on our world.
-                                Go Code Girl offers girls and non-binary youth in grades 7-10 the chance to delve into the world of coding through a series of introductory hands-on activities. Led by women undergraduate students, learn more about computer science through fundamental topics such as loops, binary systems, and AI.
-                                Note: Students will need to bring their own laptop (and charger) and their own lunch.
+                            <div class="card-header">
+                                <h3>Go Code Girl</h3>
+                            </div>
+                            <p>
+                                Computer science isn't just a subject; it's a mindset—an approach to problem-solving and creativity. From healthcare to finance, entertainment to transportation, computer science is quickly becoming the backbone of innovation and advancement in our everyday lives. Discover why more women and non-binary youth are choosing computer science for a challenging and impactful career. Go Code Girl offers students in grades 7-10 hands-on coding activities led by women undergraduates, covering topics like loops, binary systems, and AI.
                             </p>
+                            <!-- Button -->
                             <a href="https://campscui.active.com/orgs/EngineeringOutreachUniversityofToronto#/selectSessions/3474643" target="_blank" class="btn-current">Register Here!</a>
+                            <!-- Tags -->
+                            <div class="tags">
+                                <span class="tag">Computer Science</span>
+                                <span class="tag">High School</span>
+                            </div>
+                        </div>
+                        <!-- Image  -->
+                        <div class="image-container">
+                            <img src="img/marketing/Recruitment_Main.png" class="img-fluid" alt="comm-outreach">
                         </div>
                     </div>
                 </div>
             </div>
+            
             
             <div class="row flex-items-lg-middle flex-items-lg-center"> 
                 <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
