--- a/events.html
+++ b/events.html
@@ -138,7 +138,7 @@
                             <p style="margin-left: 80px; margin-right: 80px;">
                                WISE is collaborating with BraveCareers to host a workshop to improve your resume.  Get advice on your resume directly from a hiring manager from the healthcare data industry!  
                             </p>
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLScB_xNx_51X_pZwgKTSTBVwOiDxyosR0UynsPU8YJrt2iewqQ/viewform?usp=sf_link" target="_blank" class="btn-current">Register Here!</a>
+                            <a href="https://lu.ma/n11t0pc3" target="_blank" class="btn-current">Register Here!</a>
                         </div>
                     </div>
                 </div>
