change "sept" to "soon" and remove banner in events

--- a/old/conference.html
+++ b/old/conference.html
@@ -94,7 +94,7 @@
             <div class="container">
                 <div class="section-header">
                     <h3>**Conference Page Coming Soon**</h3>
-                    <p>Please check back in late September/early October for more information!</p>
+                    <p>Please check back soon for more information!</p>
                     <p>Conference Specific Inquiries: <a href = "mailto:conference.chair@wiseuoft.org"><b>conference.chair@wiseuoft.org</b></a></p>
                     <p>General Inquiries: <a href = "mailto:info@wiseuoft.org"><b>info@wiseuoft.org</b></a></p>
                 </div>
