--- a/community-outreach.html
+++ b/community-outreach.html
@@ -95,7 +95,7 @@
             <div class="container">
                 <div class="info-banner">
                     <ion-icon name="information-circle-outline" class="icon-size"></ion-icon>
-                    <p> Please check back in September for more infomation on the 2024-2025 academic year! </p>
+                    <p> Please check back soon for more infomation on the 2024-2025 academic year! </p>
                 </div>
                 <div class="section-header">
                     <h3>Community Outreach</h3>
