Update tag styling

--- a/events.html
+++ b/events.html
@@ -202,7 +202,7 @@
                                     where you can have face-to-face conversations with reps from leading companies in STEM. We’re hosting OPG, GM, Vector Institute, Qualcomm, Intuit, CIBC, Magna, Mastercard, and more! Catering and refreshments will be provided!
                                 </p>
                                 <!-- Button -->
-                                <a href="" target="_blank" class="btn-old">Register Here!</a>
+                                <a href="" target="_blank" class="btn-disabled">Register Here!</a>
                                 <!-- Tags -->
                                 <div class="tags">
                                     <span class="tag">Science</span>
@@ -268,7 +268,7 @@
                                     <span class="tag">Science</span>
                                     <span class="tag">Technology</span>
                                     <span class="tag">Engineering</span>
-                                    <span class="tag">Univeristy</span>
+                                    <span class="tag">University</span>
                                 </div>
                             </div>
                             <!-- Image  -->
