add card (no words)

--- a/events.html
+++ b/events.html
@@ -122,6 +122,37 @@
                         <div class="card d-flex flex-row align-items-center">
                             <div class="card-block">
                                 <!-- Card Content -->
+                                <h4 class="card-title">October 9, 2024</h4>
+                                <div class="card-header">
+                                    <h3>WISE High School Conference</h3>
+                                </div>
+                                <p>
+                                    
+                                </p>
+                                <!-- Button -->
+                                <a href="https://www.zeffy.com/en-CA/ticketing/wise-2024-high-school-conference" target="_blank" class="btn-current" data-date="2024-11-09">Register Here!</a>
+                                <!-- Tags -->
+                                <div class="tags">
+                                    <span class="tag-university">Highschool</span>
+                                    <span class="tag-science">Science</span>
+                                    <span class="tag-tech">Tech</span>
+                                    <span class="tag-engineering">Engineering</span>
+                                    <span class="tag-math">Math</span>
+                                </div>
+                            </div>
+                            <!-- Image  -->
+                            <div class="image-container">
+                                <img src="img/events/HS_Conferance.png" class="img-fluid" alt="comm-outreach">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row flex-items-lg-middle flex-items-lg-center">
+                    <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
+                        <div class="card d-flex flex-row align-items-center">
+                            <div class="card-block">
+                                <!-- Card Content -->
                                 <h4 class="card-title">November 14, 2024</h4>
                                 <div class="card-header">
                                     <h3>Fall WISE and Cheese</h3>
