add event description

--- a/events.html
+++ b/events.html
@@ -127,7 +127,7 @@
                                     <h3>WISE High School Conference</h3>
                                 </div>
                                 <p>
-                                    
+                                    This year, WISE will be hosting the annual High School Conference, bringing together high school students from Ontario with post-secondary students, industry guests, and those in academia. The day will consist of keynote speakers, workshop series, and more on the topics of innovative research, post-secondary education in the STEM fields, and personal career journeys.
                                 </p>
                                 <!-- Button -->
                                 <a href="https://www.zeffy.com/en-CA/ticketing/wise-2024-high-school-conference" target="_blank" class="btn-current" data-date="2024-11-09">Register Here!</a>
