--- a/index.html
+++ b/index.html
@@ -107,17 +107,11 @@
     </header><!-- #header -->
 
     <!--=====Opening Bar======-->
-    <section id="intro" class="clearfix">
-        <div class="container h-100" style="display: flex; justify-content: flex-end;">
-            <div class="intro-layer" style="display: flex; justify-content: center; align-items: center;">
-                <div class="justify-content-center align-self-center" style="width:100%; margin: 0%; padding: 0;">
-                    <div class="intro-info order-md-last order-first text-right">
-                        <h2><span>Women in Science and Engineering</span><br> University of Toronto</h2>
-                    </div>
-                </div>
-            </div>
+    <section id="intro" class="">
+        <div class="">
+            
         </div>
-    </section><!-- #intro -->
+    </section>
 
 
     <main id="main">
